--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,18 @@
-/* CSS Reset Simples */
+:root {
+--background-primary-color: #ffffff;
+--background-secondary-color: #f5f5f5;
+--backgrond-tertiary-color: #000000;
+
+--butoon-primary-color:#8F0101;
+--butoon-secondary-color: #B81515;
+
+--text-primary-color:#222222;
+--text-secondary-color: #FFFFFF;
+
+
+}
+
+/* CSS Reset */
 * {
   margin: 0;
   padding: 0;
